Update changelog and content status

--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-08-03"
+  items:
+    - item: Add Allies & Adversaries adversaries gear.
 - date: "2020-04-14"
   items:
     - item: Add No Disintegrations weapons.
