--- a/src/data/adversaries.yaml
+++ b/src/data/adversaries.yaml
@@ -4610,7 +4610,7 @@
   presence: 4
   skills: Brawl 4, Coercion 4, Deception 3, Discipline 3, Leadership 4, Lightsaber 4, Knowledge (Warfare) 4, Perception 3, Vigilance 3
   talents: Adversary 4, Improved Parry 4
-  abilities: Cybrog, Four-Armed
+  abilities: Cyborg, Four-armed Combat
   equipment: Armored Chassis, 4 Lightsabers, Mechanical Limbs
   notes:
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:101
