Fix duplicate entry

--- a/src/data/species.yaml
+++ b/src/data/species.yaml
@@ -145,10 +145,7 @@
   index: 0c1b09b4-30d5-415c-81b8-389a2107b9d2:22
   generatedId: 3072d036-ef9b-41c9-96ef-dad3416ccdb7
 - name: Lannik
-  index: f358e094-fb3f-46ca-a540-b76c474ac712:23
-  generatedId: af460f0e-90a8-40b4-bb82-0dbc817cd35d
-- name: Lannik
-  index: 91b5a626-105f-45d0-8347-e7bf176e4938:20
+  index: 91b5a626-105f-45d0-8347-e7bf176e4938:20, f358e094-fb3f-46ca-a540-b76c474ac712:23
   generatedId: 5e376214-dcd3-4ede-b79e-07e40e48f565
 - name: Mirialan
   index: be0796d8-6ef1-43ec-9fd6-5164e1982bb8:58
