Fix technologies spelling

--- a/src/data/gear.yaml
+++ b/src/data/gear.yaml
@@ -2224,7 +2224,7 @@
   index: 1189b4a0-d299-42e1-9a9f-7d54b58295d5:103
   generatedId: 39df2327-adeb-4d45-983e-38a21044b6bc
 - category: Tools
-  name: Corellian Technogolies Savior Anti-Grav Chute
+  name: Corellian Technologies Savior Anti-Grav Chute
   price: 450
   restricted: false
   encumbrance: 1
