Minor EotE core updates

--- a/src/data/armor.yaml
+++ b/src/data/armor.yaml
@@ -106,7 +106,7 @@
   encumbrance: 3
   hp: 1
   rarity: 3
-  index: 37ee73a9-01c8-440c-a734-ea52e2ff780a:405, 8b7c0c76-a618-4e9b-ad91-a8b142c7b866:47
+  index: 8b7c0c76-a618-4e9b-ad91-a8b142c7b866:47
   generatedId: 8977d854-801e-492d-b75f-b04561b2c3d2
 - name: Caballerin-Series Riding Tack
   defense: 0
