--- a/src/data/starships.yaml
+++ b/src/data/starships.yaml
@@ -15,7 +15,7 @@
   rarity: 6
   hp: 4
   weapons: 7
-  index: 37ee73a9-01c8-440c-a734-ea52e2ff780a:277, 8b7c0c76-a618-4e9b-ad91-a8b142c7b866:58
+  index: 8b7c0c76-a618-4e9b-ad91-a8b142c7b866:58
   generatedId: 9a3765d8-06f3-40c8-9e67-7e2dda962006
 - category: Assault Ship
   name: VT-49 Decimator
