--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "theouterrim",
   "version": "0.0.1",
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2",
-    "@material-ui/core": "^4.11.0",
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.10.0",
-    "clipboard-copy": "^3.1.0",
-    "gatsby": "^2.24.63",
-    "gatsby-plugin-google-analytics": "^2.3.14",
-    "gatsby-plugin-manifest": "^2.4.30",
-    "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-netlify": "^2.3.15",
-    "gatsby-plugin-nprogress": "^2.3.11",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-robots-txt": "^1.5.2",
-    "gatsby-plugin-sitemap": "^2.4.13",
-    "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-transformer-yaml": "^2.4.12",
+    "@material-ui/styles": "^4.11.4",
+    "clipboard-copy": "^4.0.1",
+    "gatsby": "^3.9.1",
+    "gatsby-plugin-google-analytics": "^3.9.0",
+    "gatsby-plugin-manifest": "^3.9.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-netlify": "^3.9.0",
+    "gatsby-plugin-nprogress": "^3.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-robots-txt": "^1.6.8",
+    "gatsby-plugin-sitemap": "^4.5.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-yaml": "^3.9.0",
     "js-cookie": "^2.2.1",
-    "mui-datatables": "^3.4.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "mui-datatables": "^3.7.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "scripts": {
@@ -31,21 +31,23 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.24",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.3.0",
-    "babel-preset-gatsby": "^0.5.10",
-    "eslint": "^7.9.0",
+    "babel-jest": "^27.0.6",
+    "babel-preset-gatsby": "^1.9.0",
+    "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react-app": "^5.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.2",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^16.12.0"
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "process": "^0.11.10",
+    "react-test-renderer": "^17.0.2",
+    "webpack": "^5.44.0"
   }
 }
