--- a/_data/abilities.yaml
+++ b/_data/abilities.yaml
@@ -217,7 +217,7 @@
   - 93aef378-66c0-419b-9675-dd9ad54bc3b9:77
   generatedId: 1c3e0959-341c-4857-a4b9-39c172227348
   full_name: Brute Strength
-- description: When in jungle, choku add [BOOST}[BOOST] to all Stealth checks
+- description: When in jungle, choku add [BOOST][BOOST] to all Stealth checks
   index:
   - 2744c440-3ad1-4f02-ac37-a8745861b4d7:59
   generatedId: 2cf53641-ed3c-4785-bb5f-8e2ced8884d4
